--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build-web": "cd web && npm run build",
     "git-push": "git add ./ && git commit -m 'Release' && git push origin main",
-    "release": "npm run build-web && release-it",
+    "release": "npm run build-web && npm run git-push && release-it",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
