--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
 		"@hookform/resolvers": "^3.9.0",
 		"@preact/signals": "^1.3.0",
 		"@preact/signals-react": "^2.1.0",
+		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-aspect-ratio": "^1.1.0",
 		"@radix-ui/react-checkbox": "^1.1.1",
